# mach-superstudio

./: .Rhistory  .Rprofile  .gitignore  README.md  SETUP.md  _quarto.yml  clean_nj_cejst.R  config.R  data_wrangling.R  fns.R  gee_raster_data.ipynb  index.qmd  index.rmarkdown  mach-superstudio.qmd  nj_pop_change_calc.R  pyproject.toml  retreat_index.ipynb  scratch.R
.github/: render-quarto.yml
docs/: SETUP.html  index.html  mach-superstudio.html  search.json
docs/notebooks/: retreat_index.html
docs/scratch/: gee_raster_data.html
docs/site_libs/bootstrap/: bootstrap.min.css
etl/: data_wrangling.R  nj_munip_pop_wrangle.R  wrangle_nlcd_and_cejst.R
inst/: WORDLIST
mach-superstudio/: README.md
notebooks/: retreat_index.ipynb
scratch/: gee_raster_data.ipynb
